--- a/meme.html
+++ b/meme.html
@@ -14,19 +14,18 @@
     <img id="makeMeme">
     </img>
     <form>
-        <label id=e meImage for="meme"></label>
-        <input type="url" id="meme" placeholder="Enter a link to an image" />
+        <label id="memeUrl" for="meme"></label>
+        <input type="url" id="memeUrl" placeholder="Enter a link to an image" />
         <br>
-        <label for="meme"></label>
-        <input type="text" id="meme" placeholder="Enter text for the top of meme" />
+        <label for="memeTop"></label>
+        <input type="text" id="memeTop" placeholder="Enter text for the top of meme" />
         <br>
-        <label for="meme"></label>
-        <input type="text" id="meme" placeholder="Enter text for the bottom of meme" />
+        <label for="memeBottom"></label>
+        <input type="text" id="memeBottom" placeholder="Enter text for the bottom of meme" />
         <br>
         <button>Add Meme</button>
     </form>
-
-
+    <div class="meme-container"><div>
 
     <script src="meme.js.js"></script>
 
