--- a/meme.html
+++ b/meme.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Create your Meme</h1>
-    <img id="makeMeme">
-    </img>
+<!--     <img id="makeMeme">
+    </img> -->
     <form>
         <label id="memeUrl" for="meme"></label>
         <input type="url" id="memeUrl" placeholder="Enter a link to an image" />
