--- a/meme.html
+++ b/meme.html
@@ -25,7 +25,7 @@
         <br>
         <button>Add Meme</button>
     </form>
-    <div class="meme-container"><div>
+    <div id="makeMeme"><div>
 
     <script src="meme.js.js"></script>
 
