--- a/meme.html
+++ b/meme.html
@@ -14,7 +14,7 @@
 <!--     <img id="makeMeme">
     </img> -->
     <form>
-        <label id="memeUrl" for="meme"></label>
+        <label for="memeUrl"></label>
         <input type="url" id="memeUrl" placeholder="Enter a link to an image" />
         <br>
         <label for="memeTop"></label>
